# ezcoo-cli

./: .flake8  LICENSE  README.md  pyproject.toml
ezcoo_cli/: cli.py
src/ezcoo_cli/: console.py  device.py
