[tool.poetry]
name = "ezcoo-cli"
version = "0.1.0"
description = "A tool to control EZCOO KVM switches via the serial interface"
authors = ["Simon Brakhane <simon@brakhane.net>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "ezcoo_cli"}]

[tool.poetry.scripts]
ezcoo-cli = "ezcoo_cli.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
click = "^8.1.3"
attrs = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
