[tool.poetry]
name = "ezcoo-cli"
version = "0.1.0"
description = "A tool to control EZCOO KVM switches via the serial interface"
authors = ["Simon Brakhane <simon@brakhane.net>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.scripts]
ezcoo-cli = "ezcoo_cli.console:main"

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
click = "^8.1.3"
attrs = "^23.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
flake8-import-order = "^0.18.2"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
